Update /state endpoint to match spec, unify error handling
Update /state route to remove merkle_root, matching spec. Endpoint
now always returns the most recent state. Eventually old state will
be fetchable with the head parameter.

Overhauls error handling to provide a unified "trap" interface,
which triggers errors based on particular protobuf enum statuses.
